# starknet.dart

./: .dev.env  .env  .env.ci  .env.constants  .env.devnet  .env.katana  .env.mainnet  .env.testnet  .gitignore  .tool-versions  CHANGELOG.md  CONTRIBUTING.md  README.md  analysis_options.yaml  docker-compose.yaml  docs.yaml  melos.yaml  protostar.toml  pubspec.yaml  pyproject.toml  renovate.json  setup_mobile_wallet.sh  test_mobile_wallet.sh  toto.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  json-rpc-api-endpoint-implementation.md
.github/workflows/: build-android-examples.yaml  cd.yaml  check_contracts.yaml  ci.yaml  ci_builder.yaml  code_health.yaml  contract-analysis.yaml  dart.yaml  release-prepare.yaml  release-publish.yaml  release-tag.yaml
.starkli/: account_0.json  account_1.json  account_for_devnet_setup.json  devnet-argent.json  devnet-oz-0.json  katana-oz-0.json
assets/: devnet-dump.json  test.csv  winners-starkpunks.csv  winners.csv
assets/compiled_contracts/: counter.json
contracts/: README.md  protostar.toml
contracts/cairo1/: docker_entry_compile.sh
contracts/src/: AccountUpgradable.cairo  Balance.cairo
contracts/v0/: README.md
contracts/v1/: docker_entry_compile.sh
contracts/v2.0.0/: docker_entry_hashes.sh
contracts/v2.2.0/: Scarb.toml
contracts/v2.6.2/: Scarb.toml
docs/: README.md  how-to-contribute.mdx  index.mdx  mobile-wallet-integration.md
example/: main.dart  starknet_example.dart
examples/: mint_erc20.dart
examples/wallet_app/devnet/: pyproject.toml
lib/: starknet.dart
scripts/: compile-sn  deploy-account  deploy-balance  fetch-devnet-accounts.sh  get-balance  get-balance copy.sh  increase-balance  increase-balance.sh  setup-devnet  setup-devnet.sh  start-devnet.sh
test/: account_test.dart  keccak_test.dart  provider_test.dart  signer_test.dart  starknet_test.dart  utils.dart
(+345 files in other folders)
