[tool.poetry]
name = "scripts"
version = "0.1.0"
description = "Helper python scripts to test the dart SDK"
authors = ["gabsn <gabin.contact@gmail.com>"]

[tool.poetry.scripts]
deploy = "scripts.python.commands.deploy:main"
declare = "scripts.python.commands.declare:main"
devnet = "scripts.python.commands.devnet:main"
interact = "scripts.python.commands.interact:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
starknet-devnet = "0.5.5"
cairo-lang = "0.11.2"
starknet-py = "0.16.1"
autopep8 = "^2.0.0"
cairo-nile = "^0.14.0"
fire = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
