[tool.poetry]
name = "devnet"
version = "0.1.0"
description = ""
authors = ["Gabin Marignier <gabin.contact@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.10"
starknet-devnet = "0.5.5a0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
